force-app/main/default/objects/Lead/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kolkata</fullName>
            </value>
            <value>
                <fullName>Ranchi</fullName>
            </value>
            <value>
                <fullName>Siliguri</fullName>
            </value>
            <value>
                <fullName>Rangapani</fullName>
            </value>
            <value>
                <fullName>Madhuban</fullName>
            </value>
            <value>
                <fullName>Tinsukia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>