force-app/main/default/objects/Lead/fields/Lead_Updating__c.field-meta.xml
<CustomField>
    <fullName>Lead_Updating__c</fullName>
    <label>Lead Updating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System Admin</fullName>
            </value>
            <value>
                <fullName>Telecallers</fullName>
            </value>
            <value>
                <fullName>Reception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>