force-app/main/default/objects/Lead/fields/LeadConversion__c.field-meta.xml
<CustomField>
    <fullName>LeadConversion__c</fullName>
    <label>LeadConversion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>PatientCase</fullName>
                <label>Patient Case</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>