force-app/main/default/objects/Lead/fields/LeadTypes__c.field-meta.xml
<CustomField>
    <fullName>LeadTypes__c</fullName>
    <label>LeadTypes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OPD</fullName>
            </value>
            <value>
                <fullName>Diagnostics</fullName>
            </value>
            <value>
                <fullName>SurgeryEstimates</fullName>
                <label>Surgery Estimates</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>