force-app/main/default/objects/Lead/fields/PAN_card_number__c.field-meta.xml
<CustomField>
    <fullName>PAN_card_number__c</fullName>
    <label>PAN card number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>