force-app/main/default/objects/Lead/fields/Permanent_Address__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Address__c</fullName>
    <label>Permanent Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>