force-app/main/default/objects/Lead/fields/Present_Address__c.field-meta.xml
<CustomField>
    <fullName>Present_Address__c</fullName>
    <label>Present Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>