force-app/main/default/objects/Lead/fields/Queue_Name_DO_NOT_DELETE__c.field-meta.xml
<CustomField>
    <fullName>Queue_Name_DO_NOT_DELETE__c</fullName>
    <description>DO NOT DELETE This Will be used To store queue Names and will escalate to another person in the same queue if
the person will not log in within 3 days, except Sundays.</description>
    <label>Queue Name DO NOT DELETE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>