force-app/main/default/objects/Lead/fields/Sex__c.field-meta.xml
<CustomField>
    <fullName>Sex__c</fullName>
    <label>Sex</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MALE</fullName>
            </value>
            <value>
                <fullName>FEMALE</fullName>
            </value>
            <value>
                <fullName>TRANSGENDER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>