force-app/main/default/objects/Lead/fields/Time_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Time_Of_Birth__c</fullName>
    <label>Time Of Birth</label>
    <type>Time</type>
</CustomField>