force-app/main/default/objects/Lead/fields/UHID__c.field-meta.xml
<CustomField>
    <fullName>UHID__c</fullName>
    <label>UHID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>