force-app/main/default/objects/Lead/fields/Whatsapp_No__c.field-meta.xml
<CustomField>
    <fullName>Whatsapp_No__c</fullName>
    <label>Whatsapp No</label>
    <type>Phone</type>
</CustomField>