force-app/main/default/objects/Lead/validationRules/Phone_number_has_to_have_country_code.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_number_has_to_have_country_code</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Phone)),
  NOT(REGEX(Phone, &quot;^\\+\\d{1,3}\\s\\d{4,}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Country code is mandatory for this field</errorMessage>
</ValidationRule>