force-app/main/default/objects/Lead/listViews/Medica_Siliguri_Team_Lead.listView-meta.xml
<ListView>
    <fullName>Medica_Siliguri_Team_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Medica Siliguri Team</label>
    <queue>Medica_Siliguri_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>